# SalishSeaCmd

./: .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  __pkg_metadata__.py  bitbucket-pipelines.yml  environment-dev.yaml  environment-rtd.yml  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: add-milestone-issue-pr.yaml  assign-issue-pr.yaml  codeql-analysis.yaml  docs-linkcheck.yaml  pytest-coverage.yaml  pytest-with-coverage.yaml  sphinx-linkcheck.yaml  update-pixi-lockfile.yaml
docs/: Makefile  SalishSea.yaml.example-NEMO-3.4  SalishSea.yaml.example-NEMO-3.6  api.rst  breaking_changes.rst  conf.py  development.rst  index.rst  installation.rst  license_description.txt  pkg_development.rst  run_description_file.rst  subcommands.rst
docs/run_description_file/: 3.4_yaml_file.rst  3.6_agrif_yaml_file.rst  3.6_yaml_file.rst  SalishSea.yaml.example-NEMO-3.4  SalishSea.yaml.example-NEMO-3.6  SalishSeaAGRIF.yaml.example-NEMO-3.6  index.rst  segmented_runs.rst
env/: environment-dev.yaml  requirements.txt
envs/: environment-dev.yaml  environment-hpc.yaml  environment-rtd.yaml  environment-test.yaml  requirements.txt
pipelines-test-env/: Dockerfile  environment-test.yaml
salishsea_cmd/: __about__.py  __init__.py  __pkg_metadata__.py  api.py  combine.py  fspath.py  gather.py  get_cgrf.py  lib.py  main.py  prepare.py  run.py  split_results.py
tests/: test_api.py  test_combine.py  test_gather.py  test_get_cgrf.py  test_lib.py  test_prepare.py  test_run.py  test_split_results.py
