# Copyright 2013 – present by the SalishSeaCast Project Contributors
# and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


# SalishSeaCmd -- SalishSeaCast NEMO command processor

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "SalishSeaCmd"
dynamic = [ "version" ]
description = "SalishSeaCast NEMO Command Processor"
readme = "README.rst"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Doug Latornell", email = "dlatornell@eoas.ubc.ca" },
]
keywords = [
    "automation", "oceanography", "ocean modelling",
    "UBC-MOAD", "Salish Sea", "SalishSeaCast",
]
dependencies = [
    "arrow",
    "attrs",
    "cliff",
    "f90nml",
    "gitpython",
    "python-hglib",
    "pyyaml",
]

[project.urls]
"Documentation" = "https://salishsea-cmd.readthedocs.io/en/latest/"
"Changelog" = "https://salishseacmd.readthedocs.io/en/latest/breaking_changes.html"
"Issue Tracker" = "https://github.com/SalishSeaCast/SalishSeaCmd/issues"
"Source Code" = "https://github.com/SalishSeaCast/SalishSeaCmd"

[project.scripts]
salishsea = "salishsea_cmd.main:main"

[project.entry-points.salishsea]
combine = "nemo_cmd.combine:Combine"
deflate = "nemo_cmd.deflate:Deflate"
gather = "nemo_cmd.gather:Gather"
prepare = "salishsea_cmd.prepare:Prepare"
run = "salishsea_cmd.run:Run"
split-results = "salishsea_cmd.split_results:SplitResults"


[tool.coverage.run]
branch = true
source = [ "salishsea_cmd", "tests"]
omit = [ ".pixi/*" ]

[tool.coverage.report]
show_missing = true


[tool.hatch.build.targets.wheel]
packages = ["salishsea_cmd"]

[tool.hatch.version]
path = "salishsea_cmd/__about__.py"



[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
arrow = "*"
attrs = "*"
cliff = "*"
f90nml = "*"
gitpython = "*"
pixi-pycharm = ">=0.0.10,<0.0.11"
python = "*"
pyyaml = "*"

[tool.pixi.pypi-dependencies]
python-hglib = "*"
nemo-cmd = { git = "https://github.com/SalishSeaCast/NEMO-Cmd.git" }
SalishSeaCmd = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
test = { features = ["test"], solve-group = "default" }
test-py312 = ["py312", "test"]
test-py313 = ["py313", "test"]
test-py314 = ["py314", "test"]
docs = { features = ["docs"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"

[tool.pixi.feature.test.tasks]
pytest = "pytest"
pytest-cov = "pytest --cov=./"
pytest-cov-html = "pytest --cov=./ --cov-report html"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
sphinx = "8.1.3.*"
sphinx-copybutton = ">=0.5.2,<0.6"
sphinx-notfound-page = "1.0.4.*"
sphinx-rtd-theme = "3.0.0.*"
mock = "*"
pillow = "*"

[tool.pixi.feature.docs.tasks]
docs = { cmd = "make clean html", cwd = "docs/" }
linkcheck = { cmd = "make clean linkcheck", cwd = "docs/" }

[dependency-groups]
docs = ["commonmark>=0.9.1,<0.10", "recommonmark>=0.7.1,<0.8", "readthedocs-sphinx-ext>=2.2.5,<3"]

[tool.pixi.feature.dev.dependencies]
# For coding style, repo QA, and pkg management
black = "*"
hatch = "*"
pre-commit = "*"
# For reuirements.txt file maintenance (until dependabot supports pixi.lock files)
pip = ">=25.3,<26"
# For unit tests
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"
# For documentation
sphinx = "8.1.3.*"
sphinx-copybutton = ">=0.5.2,<0.6"
sphinx-notfound-page = "1.0.4.*"
sphinx-rtd-theme = "3.0.0.*"

[tool.pixi.feature.dev.tasks]
update-reqs = "python -m pip list --format=freeze >> requirements.txt"
